sec-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: sec-context
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - image: ubuntu:latest
    name: con1
    command: ["sleep","10000"]
    securityContext:
      runAsUser: 2000
  - image: tomcat
    name: con2
    ports:
    - containerPort: 8080
