init-container.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app
  name: mypod-init
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: myvol
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: init-con
spec:
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30123
  selector:
    app: app
  type: NodePort
