live-tcp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: live-httget
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    livenessProbe:          #define Probe type livenessProbe or readinessProbe
      tcpSocket:                 # type of probe exec,httpGet,tcpSocket 
        port: 80
      initialDelaySeconds: 8    # When probe should be performed 
      periodSeconds: 5          # how often u want to perform check 
  - image: tomcat
    name: con2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mypod
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp
