pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - image: tomcat
    name: con2
    ports:

---
apiVersion: v1
kind: Service
metadata:
  name: mypod
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp
