readi-exec.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: live-exec
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    readinessProbe:          #define Probe type livenessProbe or readinessProbe
      exec:                 # type of probe exec,httpGet,tcpSocket
        command: 
        - cat
        - /usr/share/nginx/html/index.html123
      initialDelaySeconds: 8    # When probe should be performed 
      periodSeconds: 5          # how often u want to perform check 
  - image: tomcat
    name: con2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mypod
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp
