wordpress-env-conf.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  containers:
  - image: wordpress:latest
    name: con1
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30123
  selector:
    app: wordpress
  type: NodePort
