ingress.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: nginx-app
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginxapp-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp-ing
spec:
  ingressClassName: nginx
  rules:
  - host: "aneesh.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxapp-svc
            port:
              number: 80
